# ai-fundamentals-demos

./: .gitignore  AZ-CLI-Setup-Guide.md  CVSETUP.md  README.md
01-AzureML-regression/: FEATURE-MISMATCH.md  INFERENCE.md  README.md  car-price-automl-job.yml  car-price-train-job.yml  car-price-train-schedule.yml  pyproject.toml
01-AzureML-regression/data/: MLTable  README.md  test-cars-full.csv
01-AzureML-regression/src/: inference_demo.py  inference_endpoint.py  test-request.json  train.py
02-AzureML-classification/: README.md
02-AzureML-classification/data/: Bike_Facilities_Existing_and_Programmed.cleaned.csv  MLTable  README.md  (+1 more)
02-AzureML-clustering/: README.md
02-AzureML-clustering/data/: MLTable  (+3 more)
03-AzureML-classification/: README.md  classification-inference.ipynb  data-analysis.ipynb  pyproject.toml
04-ComputerVision/: README.md
05-NLP/: 01-AzureLanguage-SentimentAnalysis.ipynb  02-AzureLanguage-NamedEntityRecognition.ipynb  03-AzureLanguage-QuestionAnswering.ipynb  04-AzureLanguage-KeyPhraseExtraction.ipynb  05-AzureLanguage-PIIRedaction.ipynb  06-ContentUnderstanding.ipynb  README.md  pyproject.toml
05-NLP/01-SentimentAnalysis-data/: restaurant_reviews.txt
05-NLP/02-NamedEntityRecognition-data/: business_contract.txt
05-NLP/03-QuestionAnswering-data/: tech901_calendar.txt  tech901_courses.txt  tech901_prices.txt
05-NLP/04-KeyPhraseExtraction-data/: exercise_nutrition_essay.txt
05-NLP/05-PIIRedaction-data/: medical_report.txt
05-NLP/prompts/: content-understanding-prompt.md  ideas.md  initial-prompt.md
06-GenerativeAI/: README.md
(+6 files in other folders)
